# fork-ruvector

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  ruvltra-claude-code-sota.stats.json
.claude/: settings.json  statusline-command.sh
crates/ruvector-attention/: Cargo.toml
crates/ruvector-attention-cli/: Cargo.toml
crates/ruvector-attention-node/: Cargo.toml  package.json
crates/ruvector-attention-unified-wasm/: Cargo.toml
crates/ruvector-attention-wasm/: Cargo.toml
crates/ruvector-attention/examples/: hyperbolic_bench.rs
crates/ruvector-attention/src/hyperbolic/: lorentz_cascade.rs  mod.rs
crates/ruvector-attn-mincut/: Cargo.toml  README.md
crates/ruvector-attn-mincut/src/: config.rs  gating.rs  graph.rs  hysteresis.rs  lib.rs  mincut.rs  witness.rs
crates/ruvector-bench/: Cargo.toml
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cli/.claude/: settings.json
crates/ruvector-cli/sql/: hooks_schema.sql
crates/ruvector-cli/src/: main.rs
crates/ruvector-cli/src/cli/: format.rs  graph.rs  hooks.rs  hooks_postgres.rs  mod.rs
crates/ruvector-cli/tests/: cli_tests.rs  hooks_tests.rs
crates/ruvector-cluster/: Cargo.toml
crates/ruvector-coherence/: Cargo.toml  README.md
crates/ruvector-coherence/src/: batch.rs  comparison.rs  lib.rs  metrics.rs  quality.rs
crates/ruvector-collections/: Cargo.toml
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/benches/: bench_memory.rs  bench_simd.rs  real_benchmark.rs
crates/ruvector-core/docs/: EMBEDDINGS.md
crates/ruvector-core/examples/: embeddings_example.rs  neon_benchmark.rs
crates/ruvector-core/src/: agenticdb.rs  arena.rs  cache_optimized.rs  embeddings.rs  error.rs  lib.rs  lockfree.rs  quantization.rs  simd_intrinsics.rs  storage.rs  vector_db.rs
crates/ruvector-core/src/advanced/: learned_index.rs  neural_hash.rs
crates/ruvector-core/src/advanced_features/: conformal_prediction.rs  product_quantization.rs
crates/ruvector-core/src/index/: hnsw.rs
crates/ruvector-core/tests/: embeddings_test.rs  property_tests.rs  test_memory_pool.rs  test_quantization.rs  test_simd_correctness.rs
crates/ruvector-delta-consensus/: Cargo.toml
crates/ruvector-delta-consensus/src/: causal.rs  conflict.rs  crdt.rs  error.rs  lib.rs
crates/ruvector-delta-core/: Cargo.toml
crates/ruvector-delta-core/src/: compression.rs  delta.rs  encoding.rs  error.rs  lib.rs  stream.rs  window.rs
crates/ruvector-delta-graph/: Cargo.toml
crates/ruvector-delta-graph/src/: edge_delta.rs  error.rs  lib.rs  node_delta.rs  traversal.rs
crates/ruvector-delta-index/: Cargo.toml
crates/ruvector-delta-index/src/: error.rs  incremental.rs  lib.rs  quality.rs  repair.rs
crates/ruvector-delta-wasm/: Cargo.toml
crates/ruvector-delta-wasm/src/: apply.rs  capture.rs  lib.rs  memory.rs  simd.rs
crates/ruvector-diskann/: Cargo.toml
crates/ruvector-diskann-node/: Cargo.toml
crates/ruvector-diskann-node/src/: lib.rs
crates/ruvector-diskann/src/: distance.rs  error.rs  graph.rs  index.rs  lib.rs  pq.rs
crates/ruvector-domain-expansion/: Cargo.toml  README.md
crates/ruvector-domain-expansion-wasm/: Cargo.toml
crates/ruvector-domain-expansion-wasm/src/: lib.rs
crates/ruvector-domain-expansion/benches/: domain_expansion_bench.rs
crates/ruvector-domain-expansion/docs/: README.md
crates/ruvector-domain-expansion/src/: cost_curve.rs  domain.rs  error.rs  lib.rs  meta_learning.rs  planning.rs  policy_kernel.rs  rust_synthesis.rs  rvf_bridge.rs  tool_orchestration.rs  transfer.rs
crates/ruvector-filter/: Cargo.toml
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-gnn-node/: Cargo.toml  package.json
crates/ruvector-gnn-node/npm/darwin-arm64/: package.json
crates/ruvector-gnn-node/npm/darwin-x64/: package.json
crates/ruvector-gnn-node/npm/linux-arm64-gnu/: package.json
crates/ruvector-gnn-node/npm/linux-arm64-musl/: package.json
crates/ruvector-gnn-node/npm/linux-x64-gnu/: package.json
crates/ruvector-gnn-node/npm/linux-x64-musl/: package.json
crates/ruvector-gnn-node/npm/win32-x64-msvc/: package.json
crates/ruvector-gnn-wasm/: Cargo.toml
crates/ruvector-gnn/examples/: loss_demo.rs
crates/ruvector-gnn/src/: ewc.rs  layer.rs  lib.rs  replay.rs  scheduler.rs  search.rs  tensor.rs  training.rs
crates/ruvector-gnn/tests/: loss_verification.rs
crates/ruvector-graph-node/: Cargo.toml
crates/ruvector-graph-node/src/: lib.rs  streaming.rs  transactions.rs  types.rs
crates/ruvector-graph-transformer/: Cargo.toml  README.md
crates/ruvector-graph-transformer-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/ruvector-graph-transformer-node/npm/darwin-arm64/: package.json
crates/ruvector-graph-transformer-node/npm/darwin-x64/: package.json  ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-gnu/: package.json  ruvector-graph-transformer.linux-arm64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-musl/: package.json  ruvector-graph-transformer.linux-arm64-musl.node
crates/ruvector-graph-transformer-node/npm/linux-x64-gnu/: package.json  ruvector-graph-transformer.linux-x64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-x64-musl/: package.json  ruvector-graph-transformer.linux-x64-gnu.node  ruvector-graph-transformer.linux-x64-musl.node
crates/ruvector-graph-transformer-node/src/: lib.rs  transformer.rs
crates/ruvector-graph-transformer-wasm/: Cargo.toml  README.md
crates/ruvector-graph-transformer-wasm/pkg/: package.json  ruvector_graph_transformer_wasm.d.ts  ruvector_graph_transformer_wasm.js  ruvector_graph_transformer_wasm_bg.wasm
crates/ruvector-graph-transformer-wasm/src/: lib.rs  transformer.rs  utils.rs
crates/ruvector-graph-transformer-wasm/tests/: web.rs
crates/ruvector-graph-transformer/src/: biological.rs  config.rs  economic.rs  error.rs  lib.rs  manifold.rs  physics.rs  proof_gated.rs  self_organizing.rs  sublinear_attention.rs  temporal.rs  verified_training.rs
crates/ruvector-graph-transformer/tests/: integration.rs
(+2236 files in other folders)
