[package]
name = "ruvector-attention-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for ruvector-attention - High-performance attention mechanisms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
authors = ["rUv <ruv@ruv.io>"]

[[bin]]
name = "ruvector-attention"
path = "src/main.rs"

[dependencies]
ruvector-attention = { path = "../ruvector-attention" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "13"
indicatif = "0.17"
tabled = "0.15"
anyhow = "1.0"
rmp-serde = "1.1"

[dev-dependencies]
criterion = "0.5"
