[package]
name = "ruvector-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI and MCP server for Ruvector"

[[bin]]
name = "ruvector"
path = "src/main.rs"

[[bin]]
name = "ruvector-mcp"
path = "src/mcp_server.rs"

[dependencies]
ruvector-core = { version = "0.1.1", path = "../ruvector-core" }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
toml = "0.8"

# Data formats
csv = "1.3"
ndarray-npy = "0.9"
ndarray = { workspace = true }

# Terminal colors
colored = "2.1"
prettytable-rs = "0.10"

# HTTP for MCP SSE transport
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# MCP support
async-trait = "0.1"
tower = "0.5"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-stream = "0.3"

# Additional utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
shellexpand = "3.1"
rand = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
