[package]
name = "ruvector-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance collection management for Ruvector vector databases"

[dependencies]
ruvector-core = { path = "../ruvector-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
