[package]
name = "ruvector-delta-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for delta operations on vectors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["delta", "vector", "wasm", "simd", "incremental"]
categories = ["wasm", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = ["ruvector-delta-core/simd"]
parallel = ["rayon"]

[dependencies]
# Core delta library
ruvector-delta-core = { path = "../ruvector-delta-core" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Utilities
parking_lot = "0.12"
smallvec = { version = "1.13", features = ["union"] }

# Optional parallelism
rayon = { version = "1.10", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
