[package]
name = "ruvector-domain-expansion-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the domain expansion cross-domain transfer learning engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://ruv.io"
authors = ["rUv <ruvnet@users.noreply.github.com>"]
keywords = ["wasm", "transfer-learning", "domain-expansion", "generalization"]
categories = ["wasm", "algorithms", "science"]
rust-version = "1.70"

[features]
default = ["rvf"]
rvf = ["ruvector-domain-expansion/rvf"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruvector-domain-expansion = { path = "../ruvector-domain-expansion" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
