[package]
name = "ruvector-gnn-wasm"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "WebAssembly bindings for RuVector GNN with tensor compression and differentiable search"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruvector-gnn = { path = "../ruvector-gnn", default-features = false, features = ["wasm"] }

# WASM
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

# Utils
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# Ensure getrandom uses wasm_js/js feature for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
